5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1636_2724.log
== TEST (2019-04-06 22:49:01) 
-- CODE:
# Entradas
n1 = float(input("Numero 1: "))
n2 = float(input("Numero 2: "))
n3 = float(input("Numero 3: "))
# Condicoes
if (n1 > n2 and n1 < n3):
	meio = n1
if (n2 > n1 and n2 < n3):
	meio = n2
if (n3 > n1 and n3 < n2):
	meio = n3
print(meio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(meio)
NameError: name 'meio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:50:03) 
-- CODE:
# Entradas
n1 = float(input("Numero 1: "))
n2 = float(input("Numero 2: "))
n3 = float(input("Numero 3: "))
# Condicoes
if (n1 > n2 and n1 < n3):
	meio = n1
if (n2 > n1 and n2 < n3):
	meio = n2
if (n3 > n1 and n3 < n2):
	meio = n3
print(meio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(meio)
NameError: name 'meio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:51:23) 
-- CODE:
# Entradas
n1 = float(input("Numero 1: "))
n2 = float(input("Numero 2: "))
n3 = float(input("Numero 3: "))
# Condicoes
if (n1 > n2 and n1 < n3):
	meio = n1
if (n2 > n1 and n2 < n3):
	meio = n2
if (n3 > n1 and n3 < n2):
	meio = n3
print(meio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(meio)
NameError: name 'meio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:52:06) 
-- CODE:
# Entradas
n1 = float(input("Numero 1: "))
n2 = float(input("Numero 2: "))
n3 = float(input("Numero 3: "))
# Condicoes
if (n1 > n2 and n1 < n3):
	meio = n1
if (n2 > n1 and n2 < n3):
	meio = n2
if (n3 > n1 and n3 < n2):
	meio = n3
print(meio)
-- EXECUTION TIME:
0.152674
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2724/main.py", line 12, in <module>
    print(meio)
NameError: name 'meio' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:52:11) 
-- CODE:
# Entradas
n1 = float(input("Numero 1: "))
n2 = float(input("Numero 2: "))
n3 = float(input("Numero 3: "))
# Condicoes
if (n1 > n2 and n1 < n3):
	meio = n1
if (n2 > n1 and n2 < n3):
	meio = n2
if (n3 > n1 and n3 < n2):
	meio = n3
print(meio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(meio)
NameError: name 'meio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:52:28) 
-- CODE:
# Entradas
n1 = float(input("Numero 1: "))
n2 = float(input("Numero 2: "))
n3 = float(input("Numero 3: "))
# Condicoes
if (n1 > n2 and n1 < n3):
	meio = n1
if (n2 > n1 and n2 < n3):
	meio = n2
if (n3 > n1 and n3 < n2):
	meio = n3
print(meio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(meio)
NameError: name 'meio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:52:50) 
-- CODE:
# Entradas
n1 = float(input("Numero 1: "))
n2 = float(input("Numero 2: "))
n3 = float(input("Numero 3: "))
# Condicoes
if (n1 > n2 and n1 < n3):
	meio = n1
if (n2 > n1 and n2 < n3):
	meio = n2
if (n3 > n1 and n3 < n2):
	meio = n3
print(meio)
-- EXECUTION TIME:
0.127824
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2724/main.py", line 12, in <module>
    print(meio)
NameError: name 'meio' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:54:45) 
-- CODE:
# Entradas
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))
n3 = int(input("Numero 3: "))
# Condicoes
if (n1 > n2 and n1 < n3):
	meio = n1
if (n2 > n1 and n2 < n3):
	meio = n2
if (n3 > n1 and n3 < n2):
	meio = n3
print(meio)
-- EXECUTION TIME:
0.135629
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2724/main.py", line 12, in <module>
    print(meio)
NameError: name 'meio' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:55:08) 
-- CODE:
# Entradas
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))
n3 = int(input("Numero 3: "))
# Condicoes
if (n1 > n2 and n1 < n3):
	meio = n1
if (n2 > n1 and n2 < n3):
	meio = n2
if (n3 > n1 and n3 < n2):
	meio = n3
print(meio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(meio)
NameError: name 'meio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:56:40) 
-- CODE:
# Entradas
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))
n3 = int(input("Numero 3: "))
# Condicoes
if (n1 > n2 and n1 < n3):
	meio = n1
if (n2 > n1 and n2 < n3):
	meio = n2
if (n3 > n1 and n3 < n2):
	meio = n3
print(meio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(meio)
NameError: name 'meio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:57:07) 
-- CODE:
# Entradas
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))
n3 = int(input("Numero 3: "))
# Condicoes
if (n1 > n2 and n1 < n3):
	meio = n1
if (n2 > n1 and n2 < n3):
	meio = n2
if (n3 > n1 and n3 < n2):
	meio = n3
print(meio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(meio)
NameError: name 'meio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 23:00:05) 
-- CODE:
# Entradas
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))
n3 = int(input("Numero 3: "))
# Condicoes
if (n1 > n2 and n1 < n3):
	meio = n1
if (n1 < n2 and n1 > n3):
	meio = n1
if (n2 > n1 and n2 < n3):
	meio = n2
if(n2 < n1 and n2 > n3):
	meio = n2
if (n3 > n1 and n3 < n2):
	meio = n3
if(n3 < n1 and n3 > n2):
	meio = n3
print(meio)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 23:00:26) 
-- CODE:
# Entradas
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))
n3 = int(input("Numero 3: "))
# Condicoes
if (n1 > n2 and n1 < n3):
	meio = n1
if (n1 < n2 and n1 > n3):
	meio = n1
if (n2 > n1 and n2 < n3):
	meio = n2
if(n2 < n1 and n2 > n3):
	meio = n2
if (n3 > n1 and n3 < n2):
	meio = n3
if(n3 < n1 and n3 > n2):
	meio = n3
print(meio)
-- EXECUTION TIME:
0.243349
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 23:01:36) 
-- CODE:
# Entradas
n1 = int(input("Numero 1: "))
n2 = int(input("Numero 2: "))
n3 = int(input("Numero 3: "))
# Condicoes
if (n1 > n2 and n1 < n3):
	meio = n1
if (n1 < n2 and n1 > n3):
	meio = n1
if (n2 > n1 and n2 < n3):
	meio = n2
if(n2 < n1 and n2 > n3):
	meio = n2
if (n3 > n1 and n3 < n2):
	meio = n3
if(n3 < n1 and n3 > n2):
	meio = n3
print(meio)
-- EXECUTION TIME:
0.146028
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
